fix unnecessary vertical scrollbar

--- a/src/chat-bubble/styles.scss
+++ b/src/chat-bubble/styles.scss
@@ -23,6 +23,7 @@
   gap: cs.$space-scaled-s;
   padding: cs.$space-scaled-s;
   min-width: 0;
+  overflow-x: auto;
 
   border-start-start-radius: cs.$border-radius-chat-bubble;
   border-start-end-radius: cs.$border-radius-chat-bubble;
@@ -53,7 +54,7 @@
 }
 
 .content {
-  overflow: auto;
+  /* Used in test utils */
 }
 
 .actions {
